<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_contacts_ios" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/welcomeToUse"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name_long"
        android:textColor="@color/gray"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/login_et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/account"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/login_tv_accountDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountDescription"
        android:visibility="gone" />

    <EditText
        android:id="@+id/login_et_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/passcode"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/login_tv_passcodeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passcodeDescription"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login" />

    <TextView
        android:id="@+id/login_tv_enroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enroll" />


</LinearLayout>