<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".EmptyHomepage">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_headshot"
        tools:ignore="ImageContrastCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/ehp_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/brown" />

    <EditText
        android:id="@+id/ehp_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/brown" />

    <EditText
        android:id="@+id/ehp_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/brown" />

    <EditText
        android:id="@+id/ehp_et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/brown" />

    <EditText
        android:id="@+id/ehp_et_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signature"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/brown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/gander"
            android:textSize="17sp"
            tools:ignore="TextSizeCheck" />

        <RadioGroup
            android:id="@+id/ehp_rg_gander"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ehp_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/ehp_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/hobby"
            android:textSize="17sp"
            tools:ignore="TextSizeCheck" />

        <CheckBox
            android:id="@+id/ehp_cb_singing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singing" />

        <CheckBox
            android:id="@+id/ehp_cb_dancing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dancing" />

        <CheckBox
            android:id="@+id/ehp_cb_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ehp_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/ehp_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck" />


    </LinearLayout>


</LinearLayout>