<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".Homepage">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/hp_iv_headshot"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_headshot"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/hp_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:hint="@string/name"
            android:textSize="50dp"
            android:textStyle="bold" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />


    <EditText
        android:id="@+id/hp_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/hp_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/hp_et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/hp_et_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signature"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/hobby"
            android:textSize="17sp"
            tools:ignore="TextSizeCheck" />

        <CheckBox
            android:id="@+id/hp_cb_singing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singing" />

        <CheckBox
            android:id="@+id/hp_cb_dancing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dancing" />

        <CheckBox
            android:id="@+id/hp_cb_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hp_btn_modify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/modify"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/hp_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/hp_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck" />


    </LinearLayout>


</LinearLayout>