<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/show_iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_contacts_ios" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/show_iv_icon"
            android:gravity="center">

            <TextView
                android:id="@+id/show_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/brown"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/show_tv_title"
                android:layout_gravity="center"
                android:text="@string/yourAccount"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/show_et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/account"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/show_et_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/passcode"
        android:importantForAutofill="no"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gander"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/show_rg_gander"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/enroll_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/male"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/enroll_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/female"
                android:enabled="false"/>

        </RadioGroup>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnrollShowReminder"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/show_btn_backToLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/backToLogin" />


</LinearLayout>