<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ContactList">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/brown"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/main_et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/main_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/main_btn_sync"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/sync"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_rv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />




</LinearLayout>